summative.moria.Moria.scala.error
Erreur de compilation :
Moria:4: error: not found: value Direction
    while((getDirection() == Direction.EST) && !estSurBiscuit() && !porteBiscuit()){
                             ^Moria:8: error: not found: value Direction
    while((getDirection() == Direction.OUEST) && !estSurBiscuit() && porteBiscuit()){
                             ^