summative.moria.Moria.scala.code
def clearMoria(){
  droite();droite();
  while(!estFaceMur()){
    while((getDirection() == Direction.EST) && !estSurBiscuit() && !porteBiscuit()){
      avance();
    }
    prendBiscuit();droite();droite()
    while((getDirection() == Direction.OUEST) && !estSurBiscuit() && porteBiscuit()){
      avance();
    }
    recule();poseBiscuit();droite();droite();
  }
  droite();avance();gauche();avance();
}